# Search_Engine

./: .gitignore  CMakeLists.txt  README.md  build_log.txt  main.cpp  test.idx
include/: indexer.hpp  inverted_index.hpp  porter_stemmer.hpp  postings_list.hpp  query_executor.hpp  query_parser.hpp  query_tokenizer.hpp  ranker.hpp  segment.hpp  snippet_generator.hpp  stop_word_filter.hpp  tokenizer.hpp  vbyte.hpp
src/: indexer.cpp  inverted_index.cpp  porter_stemmer.cpp  postings_list.cpp  query_executor.cpp  query_parser.cpp  query_tokenizer.cpp  ranker.cpp  segment.cpp  snippet_generator.cpp  stop_word_filter.cpp  tokenizer.cpp  vbyte.cpp
tests/: test_boolean_queries.cpp  test_deltas.cpp  test_indexing.cpp  test_merging.cpp  test_phrase_queries.cpp  test_ranking.cpp  test_serialization.cpp  test_snippets.cpp  test_tokenizer.cpp  test_vbyte.cpp
